--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -38,6 +38,8 @@
                 <div class="card-body">
                     
                     <ul class="list-menu">
+                    <li><a href="{% url 'store' %}">All Products </a></li>
+                    <li><hr class="dropdown-divider"></li>
                     {% for category in links %}
                     <li><a href="{{ category.get_url }}">{{ category.category_name }}  </a></li>
                     {% endfor %}
